# wayland-extension

./: COPYING  Makefile.am  configure.ac
packaging/: wayland-extension.spec
protocol/: input-method.xml  text.xml  tizen-extension.xml  tizen-launch.xml  tizen-remote-surface.xml
protocol/tizen/: input-method.xml  text.xml  tizen-dpms.xml  tizen-extension.xml  tizen-launch.xml  tizen-remote-surface.xml  tizen-surface.xml
src/: tizen-remote-surface-client.pc.in  tizen-remote-surface-server.pc.in  wayland-protocols.pc.in
src/examples/: tzrs-consumer.c  tzrs-provider.c
